# oniria-back

./: .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
oniria/: __init__.py  __main__.py
oniria/application/: __init__.py  cs_mappers.py  cs_sevices.py  mappers.py  middlewares.py  mw_mappers.py  mw_sevices.py  sevices.py  utils.py
oniria/auth/: __init__.py
oniria/auth/application/: __init__.py  mappers.py  sevices.py
oniria/auth/domain/: __init__.py  models.py
oniria/auth/infrastructure/db/: __init__.py  repositories.py  sql_models.py
oniria/auth/infrastructure/firebase/: firebase_config.py  firebase_service.py
oniria/auth/interfaces/: __init__.py  routes.py  schemas.py
oniria/campaign/infrastructure/db/: __init__.py  sql_models.py
oniria/db/: __init__.py  database.py
oniria/domain/: __init__.py  cs_models.py  exceptions.py  models.py  mw_models.py
oniria/infrastructure/db/: __init__.py  base_sql_models.py  cs_repositories.py  cs_sql_models.py  database.py  mw_repositories.py  mw_sql_models.py  repositories.py  sql_models.py
oniria/infrastructure/firebase/: firebase_service.py
oniria/interfaces/: __init__.py  cs_routes.py  cs_schemas.py  mw_routes.py  mw_schemas.py  routes.py  schemas.py
resources/database/: oniria.ddl  oniria.dml
tests/: conftest.py
tests/integration/: test_cs.py  test_mw.py  test_routes.py
tests/unit/: test_routes.py
